tests/snapshots/snapshot_test__integration_multiple_conflicts.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  
○  jjagent: session integrat pt. 3

Claude-session-id: integration-multiconf-12345678

Modified regular file conflict_file.txt:
   1    1: user change after pt 2
○  
Modified regular file conflict_file.txt:
   1    1: user change 1after pt 2
○  jjagent: session integrat pt. 2

Claude-session-id: integration-multiconf-12345678

Modified regular file conflict_file.txt:
   1    1: originalchange 1
○  uwc

Added regular file conflict_file.txt:
        1: original
○  jjagent: session integrat

Claude-session-id: integration-multiconf-12345678

○  base

◆
