tests/snapshots/snapshot_test__move_session_into_ancestor.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  current

○  commit2

○  commit1

Claude-session-id: into-ancestor-87654321

○  uwc

○  base

◆
