tests/snapshots/snapshot_test__move_session_into_basic.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  current

○  commit1

Claude-session-id: into-basic-12345678

○  uwc

○  base

◆
