tests/snapshots/snapshot_test__move_session_into_integration.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  uwc

○  jjagent: session integrat

Claude-session-id: integration2-87654321

Added regular file session2.txt:
        1: session 2 content
○  jjagent: session integrat

Claude-session-id: integration1-12345678

Added regular file session1.txt:
        1: session 1 content
○  manual commit

Claude-session-id: retroactive-12345678

○  base

◆
