tests/snapshots/snapshot_test__move_session_into_replaces_trailer.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  current

○  commit with old session

Claude-session-id: new-session-87654321

○  uwc

○  base

◆
