tests/snapshots/snapshot_test__move_session_into_with_change_id.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
@  current

○  target commit

Claude-session-id: changeid-test-12345678

○  uwc

○  base

◆
